Switched to node 14

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:15-alpine
+FROM node:14-alpine
 ##############################################################
 ################        Installing Packages     ##############
 ##############################################################
 RUN apk add git && apk add zsh
-RUN npm install -g @angular/cli
+RUN yarn add @angular/cli
 ##############################################################
 ################            Create User        ###############
 ##############################################################
