Switched to npm

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@ FROM node:14-alpine
 ################        Installing Packages     ##############
 ##############################################################
 RUN apk add git && apk add zsh
-RUN yarn add @angular/cli
+RUN npm install -g @angular/cli
 ##############################################################
 ################            Create User        ###############
 ##############################################################
